--- a/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
+++ b/src/LagoVista.UserAdmin.Models/Resources/UserAdminResources.resx
@@ -2129,14 +2129,14 @@
   <data name="AppUser_Language_Select" xml:space="preserve">
     <value>-select language-</value>
   </data>
-  <data name="Organization_DefaultVectorDb" xml:space="preserve">
-    <value>Default Vector Db</value>
+  <data name="Organization_DefaultAgentContext" xml:space="preserve">
+    <value>Default Agent Context</value>
   </data>
-  <data name="Organization_DefaultVectorDb_Select" xml:space="preserve">
-    <value>-select default vector db-</value>
+  <data name="Organization_DefaultAgentContext_Select" xml:space="preserve">
+    <value>-select default agent context-</value>
   </data>
-  <data name="Organization_DefaultVectorDb_Help" xml:space="preserve">
-    <value>This is the default vector database that is used for RAG (Retrieval-Augment Generation) for the large language model that support AI within NuvIoT.</value>
+  <data name="Organization_DefaultAgentContext_Help" xml:space="preserve">
+    <value>This is the default agent context that is used to connect to APTIX.</value>
   </data>
   <data name="InviteUser_InvitedByEmail" xml:space="preserve">
     <value>Invited By Email</value>
